--- a/kotlin/mobilesdkrs/build.gradle
+++ b/kotlin/mobilesdkrs/build.gradle
@@ -48,6 +48,10 @@ dependencies {
 
     implementation "net.java.dev.jna:jna:5.13.0@aar"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "androidx.annotation:annotation:1.5.0"
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0-RC.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
 }
 
 apply plugin: 'com.github.willir.rust.cargo-ndk-android'
