--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
         pod trunk push SpruceIDMobileSdkRs.podspec --synchronous
 
   kotlin:
-    runs-on: ubuntu-latest-medium
+    runs-on: ubuntu-latest-large
     needs: validation
     defaults:
       run:
