--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
         pod trunk push SpruceIDMobileSdkRs.podspec --synchronous
 
   kotlin:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-large
     needs: validation
     defaults:
       run:
