--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.6.1", features = ["v4"] }
 w3c-vc-barcodes = { git = "https://github.com/spruceid/w3c-vc-barcodes", rev = "c1c99da" }
 x509-cert = { version = "0.2.5" }
+urlencoding = "2.1.3"
 
 
 [target.'cfg(target_os = "android")'.dependencies]
