--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ cose-rs = { git = "https://github.com/spruceid/cose-rs", rev = "0018c9b", featur
 ] }
 isomdl = { git = "https://github.com/spruceid/isomdl", rev = "1f4f762" }
 oid4vci = { git = "https://github.com/spruceid/oid4vci-rs", rev = "d95fe3a" }
-oid4vp = { git = "https://github.com/spruceid/oid4vp-rs", rev = "c57dee1" }
+openid4vp = { git = "https://github.com/spruceid/openid4vp", rev = "7272f40" }
 ssi = { version = "0.9", features = ["secp256r1", "secp384r1"] }
 
 async-trait = "0.1"
